# aio-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  docker-compose.yml  guniconf.py  make_rpm  pyproject.toml  run  {{cookiecutter.project_name}}.service
{{cookiecutter.project_name}}/core/: app.py  config.toml  handlers.py
{{cookiecutter.project_name}}/tests/: conftest.py  test_handlers.py
