[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6.2"
aiodns = "^2.0.0"
cchardet = "^2.1.6"
brotlipy = "^0.7.0"
aiologger = "^0.5.0"
aiofiles = "^0.5.0"
toml = "^0.10.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-aiohttp = "^0.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
